<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">1505094703080117</string>
    <string name="app_name">HazmeElParo</string>
    <string name="texto_instrucciones_uno">Hazme el paro es una aplicación para reportar casos de acoso (miradas incómodas y agresión verbal) y abuso sexual (tocamientos/arrimones y exhibición de partes) contra las mujeres en el transporte público, en tres sencillos pasos:</string>
    <string name="texto_numero_1">CONFIGURA</string>
    <string name="texto_numero_2">REPORTA</string>
    <string name="texto_numero_3">CONECTA</string>
    <string name="registro_et_telefono">Teléfono</string>
    <string name="mensaje_emergencia">Márcame a mi celular en cuanto puedas, por favor.</string>
    <string name="mensaje_emergencia_hint">Agrega un mensaje de emergencia</string>
    <string name="eliminar_contacto">Eliminar contacto</string>
    <string name="instrucciones_contacto">Si en algún momento te sientes insegura/inseguro o agredida/agredido, puedes apretar el botón de REPORTA y se mandará una notificación al centro de mando y al contacto que elijas en este momento (si es que así lo configuraste).</string>
    <string name="registro_btn_guardar">Guardar</string>
    <string name="registro_titulo">Contacto de\n emergencia</string>
    <string name="registro_selecciona_uno">Selecciona uno</string>
    <string name="registro_telefono_vacio">Debes llenar el teléfono correctamente</string>
    <string name="registro_correo_vacio">El mensaje NO puede estar vacio</string>
    <string name="registro_telefono_largo">El teléfono debe ser de 10 digitos</string>
    <string name="registro_telefono_incorrecto">El teléfono debe ser sólo de números</string>
    <string name="registro_correo_incorrecto">El correo está mal escrito</string>

    <!-- Bottons -->
    <string name="btn_continuar">Continuar</string>
    <string name="btn_reporta">Reporta</string>
    <string name="btn_conecta">Conecta</string>
    <string name="dialogo_btn_aceptar">Aceptar</string>

    <!-- Dialogos -->
    <string name="espere">Espere por favor</string>
    <string name="atras_salir">Presiona una vez más para salir</string>
    <string name="title_activity_hazme_el_paro">HazmeElParoActivity</string>
    <string name="title_section1">HazmeElParo</string>
    <string name="title_section2">Contacto</string>
    <string name="title_section3">Configuración</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="problemas_titulo">¿Quién está teniendo problemas?</string>
    <string name="notificar_chofer_familia">Gracias por reportar, hemos notificado al centro de mando y a tu contacto de seguridad.</string>
    <string name="notificar_chofer">Gracias por reportar, hemos notificado al centro de mando.</string>


    <string name="notificar_acceso_wifi">Para acceder al WiFi del autobus, da like al grupo de HazmeElParo y te enviaremos la contraseña</string>
    <string name="gracias_por_compartir">En ese grupo podrás compartir mejor tu perspectiva sobre esta campaña y el servicio que se está dando en la línea de autobús.</string>
    <string name="gracias_por_compartir_banda">Para obtener la contraseña la próxima vez que hagas un viaje, solo da clic en CONECTA.</string>
    <!-- conectar -->
    <string name="Pagina_liked">En un momento te enviaremos la contraseña</string>

    <string name="texto_config">Aquí puedes modificar las opciones de cómo funciona la app y a quiénes reportaremos.</string>
    <string name="llamar_a_tu_contacto">¿Te gustaría configurar un contacto (persona de confianza que te pudiera apoyar) y enviarle un mensaje si llegas a tener un incidente? (acoso o abuso sexual)</string>
    <string name="llamar_a_tu_cas">¿Te gustaría llamar automaticamente al Centro de Atención del Secretario de Seguridad Pública a la Ciudadania en caso de tener un incidente?</string>
    <string name="llamar_a_al_mando">¿Te gustaría avisarle al centro de mando de la unidad?, ellos tienen un protocolo de acción y sabrán cómo ayudarte.</string>
<string name="servicio_de_localizacion_gps_off">El GPS o Wifi esta apagada</string>
</resources>