<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/banner_rojo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_launcher_numero_2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center_vertical"
            android:text="@string/texto_numero_2"
            android:textColor="@color/color_negro"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_config"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_base"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/llamar_a_tu_contacto"
        android:id="@+id/textView6" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/switch_contacto"
        android:padding="5dp"
        android:layout_gravity="right"
        android:checked="true"
        android:textOff="NO"
        android:textOn="SI"
        android:thumb="@drawable/switch_bg"
        android:track="@drawable/track_bg"
        android:switchTextAppearance="@style/SwitchTextAppearance"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_base"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/llamar_a_tu_cas" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/switch_cas"
        android:padding="5dp"
        android:layout_gravity="right"
        android:checked="true"
        android:textOff="NO"
        android:textOn="SI"
        android:thumb="@drawable/switch_bg"
        android:track="@drawable/track_bg"
        android:switchTextAppearance="@style/SwitchTextAppearance"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_base"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/llamar_a_al_mando" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/switch_mando"
        android:padding="5dp"
        android:layout_gravity="right"
        android:checked="true"
        android:textOff="NO"
        android:textOn="SI"
        android:thumb="@drawable/switch_bg"
        android:track="@drawable/track_bg"
        android:switchTextAppearance="@style/SwitchTextAppearance"/>

</LinearLayout>
