<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blanco"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pager_dialog"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/color_negro" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pager_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/notificar_acceso_wifi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="25dp"
            android:layout_weight=".5"
            android:gravity="bottom"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/ic_launcher_saefubus_banderilla" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingBottom="5dp"
                android:text="@string/gracias_por_compartir_banda" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">

        <com.facebook.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            facebook:confirm_logout="false"
            facebook:fetch_user_info="true" />

        <com.facebook.widget.LikeView
            android:id="@+id/facebook_btn_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>